compilador_natural_python/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AL
    DIVIDIR_PAL
    MULTIPLICAR_PAL
    RESTAR
    SUMAR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> encabezado instrucciones cierre
Rule 2     programa -> instrucciones
Rule 3     encabezado -> PROGRAMA INICIO separador_opt
Rule 4     encabezado -> PROGRAMA separador_opt
Rule 5     encabezado -> INICIO separador_opt
Rule 6     cierre -> FIN separador_opt
Rule 7     cierre -> empty
Rule 8     instrucciones -> instrucciones instruccion
Rule 9     instrucciones -> instruccion
Rule 10    instruccion -> declaracion separador_opt
Rule 11    instruccion -> asignacion separador_opt
Rule 12    instruccion -> mostrar separador_opt
Rule 13    instruccion -> condicional separador_opt
Rule 14    instruccion -> ciclo_mientras separador_opt
Rule 15    instruccion -> ciclo_repetir separador_opt
Rule 16    instruccion -> ciclo_para separador_opt
Rule 17    declaracion -> CREAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
Rule 18    declaracion -> DECLARAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
Rule 19    declaracion -> tipo ID IGUAL expresion
Rule 20    tipo -> ENTERO
Rule 21    tipo -> DECIMAL
Rule 22    tipo -> TEXTO
Rule 23    asignacion -> ID IGUAL expresion
Rule 24    asignacion -> ID ES expresion
Rule 25    asignacion -> cambiar_valor ID CON VALOR expresion
Rule 26    cambiar_valor -> CREAR
Rule 27    cambiar_valor -> DECLARAR
Rule 28    mostrar -> MOSTRAR expresion
Rule 29    mostrar -> MOSTRAR PAREN_ABRE expresion PAREN_CIERRA
Rule 30    condicional -> SI condicion ENTONCES instrucciones FIN SI
Rule 31    condicional -> SI condicion LLAVE_ABRE instrucciones LLAVE_CIERRA
Rule 32    condicional -> SI condicion ENTONCES instrucciones SINO instrucciones FIN SI
Rule 33    ciclo_mientras -> MIENTRAS condicion HACER instrucciones FIN MIENTRAS
Rule 34    ciclo_repetir -> REPETIR expresion VECES HACER instrucciones FIN REPETIR
Rule 35    ciclo_para -> PARA ID DESDE expresion HASTA expresion HACER instrucciones FIN PARA
Rule 36    ciclo_para -> PARA ID DESDE expresion HASTA expresion AUMENTANDO EN expresion HACER instrucciones FIN PARA
Rule 37    condicion -> expresion operador_comparacion expresion
Rule 38    operador_comparacion -> MAYOR_IGUAL
Rule 39    operador_comparacion -> MENOR_IGUAL
Rule 40    operador_comparacion -> MAYOR
Rule 41    operador_comparacion -> MENOR
Rule 42    operador_comparacion -> IGUALDAD
Rule 43    operador_comparacion -> DIFERENTE
Rule 44    operador_comparacion -> ES MAYOR_PAL O IGUAL_PAL QUE
Rule 45    operador_comparacion -> ES MENOR_PAL O IGUAL_PAL QUE
Rule 46    operador_comparacion -> ES MAYOR_PAL QUE
Rule 47    operador_comparacion -> ES MENOR_PAL QUE
Rule 48    operador_comparacion -> ES IGUAL_PAL ID
Rule 49    operador_comparacion -> ES IGUAL_PAL QUE
Rule 50    operador_comparacion -> ES DIFERENTE_PAL DE
Rule 51    expresion -> expresion MAS expresion
Rule 52    expresion -> expresion MENOS expresion
Rule 53    expresion -> expresion MULT expresion
Rule 54    expresion -> expresion DIV expresion
Rule 55    expresion -> expresion MAS_PAL expresion
Rule 56    expresion -> expresion MENOS_PAL expresion
Rule 57    expresion -> expresion POR_PAL expresion
Rule 58    expresion -> expresion ENTRE_PAL expresion
Rule 59    expresion -> PAREN_ABRE expresion PAREN_CIERRA
Rule 60    expresion -> NUMERO
Rule 61    expresion -> CADENA
Rule 62    expresion -> ID
Rule 63    articulo_opt -> ARTICULO
Rule 64    articulo_opt -> empty
Rule 65    separador_opt -> separador_opt separador
Rule 66    separador_opt -> separador
Rule 67    separador_opt -> empty
Rule 68    separador -> PUNTO
Rule 69    separador -> PUNTO_COMA
Rule 70    separador -> COMA
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AL                   : 
ARTICULO             : 63
AUMENTANDO           : 36
CADENA               : 61
COMA                 : 70
CON                  : 17 18 25
CREAR                : 17 26
DE                   : 50
DECIMAL              : 21
DECLARAR             : 18 27
DESDE                : 35 36
DIFERENTE            : 43
DIFERENTE_PAL        : 50
DIV                  : 54
DIVIDIR_PAL          : 
EN                   : 36
ENTERO               : 20
ENTONCES             : 30 32
ENTRE_PAL            : 58
ES                   : 24 44 45 46 47 48 49 50
FIN                  : 6 30 32 33 34 35 36
HACER                : 33 34 35 36
HASTA                : 35 36
ID                   : 17 18 19 23 24 25 35 36 48 62
IGUAL                : 19 23
IGUALDAD             : 42
IGUAL_PAL            : 44 45 48 49
INICIO               : 3 5
LLAMADA              : 17 18
LLAVE_ABRE           : 31
LLAVE_CIERRA         : 31
MAS                  : 51
MAS_PAL              : 55
MAYOR                : 40
MAYOR_IGUAL          : 38
MAYOR_PAL            : 44 46
MENOR                : 41
MENOR_IGUAL          : 39
MENOR_PAL            : 45 47
MENOS                : 52
MENOS_PAL            : 56
MIENTRAS             : 33 33
MOSTRAR              : 28 29
MULT                 : 53
MULTIPLICAR_PAL      : 
NUMERO               : 60
O                    : 44 45
PARA                 : 35 35 36 36
PAREN_ABRE           : 29 59
PAREN_CIERRA         : 29 59
POR_PAL              : 57
PROGRAMA             : 3 4
PUNTO                : 68
PUNTO_COMA           : 69
QUE                  : 44 45 46 47 49
REPETIR              : 34 34
RESTAR               : 
SI                   : 30 30 31 32 32
SINO                 : 32
SUMAR                : 
TEXTO                : 22
VALOR                : 17 18 25
VARIABLE             : 17 18
VECES                : 34
error                : 

Nonterminals, with rules where they appear

articulo_opt         : 17 18
asignacion           : 11
cambiar_valor        : 25
ciclo_mientras       : 14
ciclo_para           : 16
ciclo_repetir        : 15
cierre               : 1
condicion            : 30 31 32 33
condicional          : 13
declaracion          : 10
empty                : 7 64 67
encabezado           : 1
expresion            : 17 18 19 23 24 25 28 29 34 35 35 36 36 36 37 37 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59
instruccion          : 8 9
instrucciones        : 1 2 8 30 31 32 32 33 34 35 36
mostrar              : 12
operador_comparacion : 37
programa             : 0
separador            : 65 66
separador_opt        : 3 4 5 6 10 11 12 13 14 15 16 65
tipo                 : 17 18 19

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . encabezado instrucciones cierre
    (2) programa -> . instrucciones
    (3) encabezado -> . PROGRAMA INICIO separador_opt
    (4) encabezado -> . PROGRAMA separador_opt
    (5) encabezado -> . INICIO separador_opt
    (8) instrucciones -> . instrucciones instruccion
    (9) instrucciones -> . instruccion
    (10) instruccion -> . declaracion separador_opt
    (11) instruccion -> . asignacion separador_opt
    (12) instruccion -> . mostrar separador_opt
    (13) instruccion -> . condicional separador_opt
    (14) instruccion -> . ciclo_mientras separador_opt
    (15) instruccion -> . ciclo_repetir separador_opt
    (16) instruccion -> . ciclo_para separador_opt
    (17) declaracion -> . CREAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
    (18) declaracion -> . DECLARAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
    (19) declaracion -> . tipo ID IGUAL expresion
    (23) asignacion -> . ID IGUAL expresion
    (24) asignacion -> . ID ES expresion
    (25) asignacion -> . cambiar_valor ID CON VALOR expresion
    (28) mostrar -> . MOSTRAR expresion
    (29) mostrar -> . MOSTRAR PAREN_ABRE expresion PAREN_CIERRA
    (30) condicional -> . SI condicion ENTONCES instrucciones FIN SI
    (31) condicional -> . SI condicion LLAVE_ABRE instrucciones LLAVE_CIERRA
    (32) condicional -> . SI condicion ENTONCES instrucciones SINO instrucciones FIN SI
    (33) ciclo_mientras -> . MIENTRAS condicion HACER instrucciones FIN MIENTRAS
    (34) ciclo_repetir -> . REPETIR expresion VECES HACER instrucciones FIN REPETIR
    (35) ciclo_para -> . PARA ID DESDE expresion HASTA expresion HACER instrucciones FIN PARA
    (36) ciclo_para -> . PARA ID DESDE expresion HASTA expresion AUMENTANDO EN expresion HACER instrucciones FIN PARA
    (20) tipo -> . ENTERO
    (21) tipo -> . DECIMAL
    (22) tipo -> . TEXTO
    (26) cambiar_valor -> . CREAR
    (27) cambiar_valor -> . DECLARAR

    PROGRAMA        shift and go to state 4
    INICIO          shift and go to state 5
    CREAR           shift and go to state 14
    DECLARAR        shift and go to state 17
    ID              shift and go to state 16
    MOSTRAR         shift and go to state 19
    SI              shift and go to state 20
    MIENTRAS        shift and go to state 21
    REPETIR         shift and go to state 22
    PARA            shift and go to state 23
    ENTERO          shift and go to state 24
    DECIMAL         shift and go to state 25
    TEXTO           shift and go to state 26

    programa                       shift and go to state 1
    encabezado                     shift and go to state 2
    instrucciones                  shift and go to state 3
    instruccion                    shift and go to state 6
    declaracion                    shift and go to state 7
    asignacion                     shift and go to state 8
    mostrar                        shift and go to state 9
    condicional                    shift and go to state 10
    ciclo_mientras                 shift and go to state 11
    ciclo_repetir                  shift and go to state 12
    ciclo_para                     shift and go to state 13
    tipo                           shift and go to state 15
    cambiar_valor                  shift and go to state 18

state 1

    (0) S' -> programa .



state 2

    (1) programa -> encabezado . instrucciones cierre
    (8) instrucciones -> . instrucciones instruccion
    (9) instrucciones -> . instruccion
    (10) instruccion -> . declaracion separador_opt
    (11) instruccion -> . asignacion separador_opt
    (12) instruccion -> . mostrar separador_opt
    (13) instruccion -> . condicional separador_opt
    (14) instruccion -> . ciclo_mientras separador_opt
    (15) instruccion -> . ciclo_repetir separador_opt
    (16) instruccion -> . ciclo_para separador_opt
    (17) declaracion -> . CREAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
    (18) declaracion -> . DECLARAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
    (19) declaracion -> . tipo ID IGUAL expresion
    (23) asignacion -> . ID IGUAL expresion
    (24) asignacion -> . ID ES expresion
    (25) asignacion -> . cambiar_valor ID CON VALOR expresion
    (28) mostrar -> . MOSTRAR expresion
    (29) mostrar -> . MOSTRAR PAREN_ABRE expresion PAREN_CIERRA
    (30) condicional -> . SI condicion ENTONCES instrucciones FIN SI
    (31) condicional -> . SI condicion LLAVE_ABRE instrucciones LLAVE_CIERRA
    (32) condicional -> . SI condicion ENTONCES instrucciones SINO instrucciones FIN SI
    (33) ciclo_mientras -> . MIENTRAS condicion HACER instrucciones FIN MIENTRAS
    (34) ciclo_repetir -> . REPETIR expresion VECES HACER instrucciones FIN REPETIR
    (35) ciclo_para -> . PARA ID DESDE expresion HASTA expresion HACER instrucciones FIN PARA
    (36) ciclo_para -> . PARA ID DESDE expresion HASTA expresion AUMENTANDO EN expresion HACER instrucciones FIN PARA
    (20) tipo -> . ENTERO
    (21) tipo -> . DECIMAL
    (22) tipo -> . TEXTO
    (26) cambiar_valor -> . CREAR
    (27) cambiar_valor -> . DECLARAR

    CREAR           shift and go to state 14
    DECLARAR        shift and go to state 17
    ID              shift and go to state 16
    MOSTRAR         shift and go to state 19
    SI              shift and go to state 20
    MIENTRAS        shift and go to state 21
    REPETIR         shift and go to state 22
    PARA            shift and go to state 23
    ENTERO          shift and go to state 24
    DECIMAL         shift and go to state 25
    TEXTO           shift and go to state 26

    instrucciones                  shift and go to state 27
    instruccion                    shift and go to state 6
    declaracion                    shift and go to state 7
    asignacion                     shift and go to state 8
    mostrar                        shift and go to state 9
    condicional                    shift and go to state 10
    ciclo_mientras                 shift and go to state 11
    ciclo_repetir                  shift and go to state 12
    ciclo_para                     shift and go to state 13
    tipo                           shift and go to state 15
    cambiar_valor                  shift and go to state 18

state 3

    (2) programa -> instrucciones .
    (8) instrucciones -> instrucciones . instruccion
    (10) instruccion -> . declaracion separador_opt
    (11) instruccion -> . asignacion separador_opt
    (12) instruccion -> . mostrar separador_opt
    (13) instruccion -> . condicional separador_opt
    (14) instruccion -> . ciclo_mientras separador_opt
    (15) instruccion -> . ciclo_repetir separador_opt
    (16) instruccion -> . ciclo_para separador_opt
    (17) declaracion -> . CREAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
    (18) declaracion -> . DECLARAR articulo_opt VARIABLE tipo LLAMADA ID CON VALOR expresion
    (19) declaracion -> . tipo ID IGUAL expresion
    (23) asignacion -> . ID IGUAL expresion
    (24) asignacion -> . ID ES expresion
    (25) asignacion -> . cambiar_valor ID CON VALOR expresion
    (28) mostrar -> . MOSTRAR expresion
    (29) mostrar -> . MOSTRAR PAREN_ABRE expresion PAREN_CIERRA
    (30) condicional -> . SI condicion ENTONCES instrucciones FIN SI
    (31) condicional -> . SI condicion LLAVE_ABRE instrucciones LLAVE_CIERRA
    (32) condicional -> . SI condicion ENTONCES instrucciones SINO instrucciones FIN SI
    (33) ciclo_mientras -> . MIENTRAS condicion HACER instrucciones FIN MIENTRAS
    (34) ciclo_repetir -> . REPETIR expresion VECES HACER instrucciones FIN REPETIR
    (35) ciclo_para -> . PARA ID DESDE expresion HASTA expresion HACER instrucciones FIN PARA
    (36) ciclo_para -> . PARA ID DESDE expresion HASTA expresion AUMENTANDO EN expresion HACER instrucciones FIN PARA
    (20) tipo -> . ENTERO
    (21) tipo -> . DECIMAL
    (22) tipo -> . TEXTO
    (26) cambiar_valor -> . CREAR
    (27) cambiar_valor -> . DECLARAR

    $end            reduce using rule 2 (programa -> instrucciones .)
    CREAR           shift and go to state 14
    DECLARAR        shift and go to state 17
    ID              shift and go to state 16
    MOSTRAR         shift and go to state 19
    SI              shift and go to state 20
    MIENTRAS        shift and go to state 21
    REPETIR         shift and go to state 22
    PARA            shift and go to state 23
    ENTERO          shift and go to state 24
    DECIMAL         shift and go to state 25
    TEXTO           shift and go to state 26

    instruccion                    shift and go to state 28
    declaracion                    shift and go to state 7
    asignacion                     shift and go to state 8
    mostrar                        shift and go to state 9
    condicional                    shift and go to state 10
    ciclo_mientras                 shift and go to state 11
    ciclo_repetir                  shift and go to state 12
    ciclo_para                     shift and go to state 13
    tipo                           shift and go to state 15
    cambiar_valor                  shift and go to state 18

state 4

    (3) encabezado -> PROGRAMA . INICIO separador_opt
    (4) encabezado -> PROGRAMA . separador_opt
    (65) separador_opt -> . separador_opt separador
    (66) separador_opt -> . separador
    (67) separador_opt -> . empty
    (68) separador -> . PUNTO
    (69) separador -> . PUNTO_COMA
    (70) separador -> . COMA
    (71) empty -> .

  ! shift/reduce conflict for PUNTO resolved as shift
  ! shift/reduce conflict for PUNTO_COMA resolved as shift
  ! shift/reduce conflict for COMA resolved as shift
    INICIO          shift and go to state 29
    PUNTO           shift and go to state 33
    PUNTO_COMA      shift and go to state 34
    COMA            shift and go to state 35
    CREAR           reduce using rule 71 (empty -> .)
    DECLARAR        reduce using rule 71 (empty -> .)
    ID              reduce using rule 71 (empty -> .)
    MOSTRAR         reduce using rule 71 (empty -> .)
    SI              reduce using rule 71 (empty -> .)
    MIENTRAS        reduce using rule 71 (empty -> .)
    REPETIR         reduce using rule 71 (empty -> .)
    PARA            reduce using rule 71 (empty -> .)
    ENTERO          reduce using rule 71 (empty -> .)
    DECIMAL         reduce using rule 71 (empty -> .)
    TEXTO           reduce using rule 71 (empty -> .)

  ! PUNTO           [ reduce using rule 71 (empty -> .) ]
  ! PUNTO_COMA      [ reduce using rule 71 (empty -> .) ]
  ! COMA            [ reduce using rule 71 (empty -> .) ]

    separador_opt                  shift and go to state 30
    separador                      shift and go to state 31
    empty                          shift and go to state 32

state 5

    (5) encabezado -> INICIO . separador_opt
    (65) separador_opt -> . separador_opt separador
    (66) separador_opt -> . separador
    (67) separador_opt -> . empty
    (68) separador -> . PUNTO
    (69) separador -> . PUNTO_COMA
    (70) separador -> . COMA
    (71) empty -> .

  ! shift/reduce conflict for PUNTO resolved as shift
  ! shift/reduce conflict for PUNTO_COMA resolved as shift
  ! shift/reduce conflict for COMA resolved as shift
    PUNTO           shift and go to state 33
    PUNTO_COMA      shift and go to state 34
    COMA            shift and go to state 35
    CREAR           reduce using rule 71 (empty -> .)
    DECLARAR        reduce using rule 71 (empty -> .)
    ID              reduce using rule 71 (empty -> .)
    MOSTRAR         reduce using rule 71 (empty -> .)
    SI              reduce using rule 71 (empty -> .)
    MIENTRAS        reduce using rule 71 (empty -> .)
    REPETIR         reduce using rule 71 (empty -> .)
    PARA            reduce using rule 71 (empty -> .)
    ENTERO          reduce using rule 71 (empty -> .)
    DECIMAL         reduce using rule 71 (empty -> .)
    TEXTO           reduce using rule 71 (empty -> .)

  ! PUNTO           [ reduce using rule 71 (empty -> .) ]
  ! PUNTO_COMA      [ reduce using rule 71 (empty -> .) ]
  ! COMA            [ reduce using rule 71 (empty -> .) ]

    separador_opt                  shift and go to state 36
    separador                      shift and go to state 31
    empty                          shift and go to state 32

state 6

    (9) instrucciones -> instruccion .

    CREAR           reduce using rule 9 (instrucciones -> instruccion .)
    DECLARAR        reduce using rule 9 (instrucciones -> instruccion .)
    ID              reduce using rule 9 (instrucciones -> instruccion .)
    MOSTRAR         reduce using rule 9 (instrucciones -> instruccion .)
    SI              reduce using rule 9 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 9 (instrucciones -> instruccion .)
    REPETIR         reduce using rule 9 (instrucciones -> instruccion .)
    PARA            reduce using rule 9 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 9 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 9 (instrucciones -> instruccion .)
    TEXTO           reduce using rule 9 (instrucciones -> instruccion .)
    $end            reduce using rule 9 (instrucciones -> instruccion .)
    FIN             reduce using rule 9 (instrucciones -> instruccion .)
    SINO            reduce using rule 9 (instrucciones -> instruccion .)
    LLAVE_CIERRA    reduce using rule 9 (instrucciones -> instruccion .)


state 7

    (10) instruccion -> declaracion . separador_opt
    (65) separador_opt -> . separador_opt separador
    (66) separador_opt -> . separador
    (67) separador_opt -> . empty
    (68) separador -> . PUNTO
    (69) separador -> . PUNTO_COMA
    (70) separador -> . COMA
    (71) empty -> .

  ! shift/reduce conflict for PUNTO resolved as shift
  ! shift/reduce conflict for PUNTO_COMA resolved as shift
  ! shift/reduce conflict for COMA resolved as shift
    PUNTO           shift and go to state 33
    PUNTO_COMA      shift and go to state 34
    COMA            shift and go to state 35
    CREAR           reduce using rule 71 (empty -> .)
    DECLARAR        reduce using rule 71 (empty -> .)
    ID              reduce using rule 71 (empty -> .)
    MOSTRAR         reduce using rule 71 (empty -> .)
    SI              reduce using rule 71 (empty -> .)
    MIENTRAS        reduce using rule 71 (empty -> .)
    REPETIR         reduce using rule 71 (empty -> .)
    PARA            reduce using rule 71 (empty -> .)
    ENTERO          reduce using rule 71 (empty -> .)
    DECIMAL         reduce using rule 71 (empty -> .)
    TEXTO           reduce using rule 71 (empty -> .)
    $end            reduce using rule 71 (empty -> .)
    FIN             reduce using rule 71 (empty -> .)
    SINO            reduce using rule 71 (empty -> .)
    LLAVE_CIERRA    reduce using rule 71 (empty -> .)

  ! PUNTO           [ reduce using rule 71 (empty -> .) ]
  ! PUNTO_COMA      [ reduce using rule 71 (empty -> .) ]
  ! COMA            [ reduce using rule 71 (empty -> .) ]

    separador_opt                  shift and go to state 37
    separador                      shift and go to state 31
    empty                          shift and go to state 32

state 8

    (11) instruccion -> asignacion . separador_opt
    (65) separador_opt -> . separador_opt separador
    (66) separador_opt -> . separador
    (67) separador_opt -> . empty
    (68) separador -> . PUNTO
    (69) separador -> . PUNTO_COMA
    (70) separador -> . COMA
    (71) empty -> .

  ! shift/reduce conflict for PUNTO resolved as shift
  ! shift/reduce conflict for PUNTO_COMA resolved as shift
  ! shift/reduce conflict for COMA resolved as shift
    PUNTO           shift and go to state 33
    PUNTO_COMA      shift and go to state 34
    COMA            shift and go to state 35
    CREAR           reduce using rule 71 (empty -> .)
    DECLARAR        reduce using rule 71 (empty -> .)
    ID              reduce using rule 71 (empty -> .)
    MOSTRAR         reduce using rule 71 (empty -> .)
    SI              reduce using rule 71 (empty -> .)
    MIENTRAS        reduce using rule 71 (empty -> .)
    REPETIR         reduce using rule 71 (empty -> .)
    PARA            reduce using rule 71 (empty -> .)
    ENTERO          reduce using rule 71 (empty -> .)
    DECIMAL         reduce using rule 71 (empty -> .)
    TEXTO           reduce using rule 71 (empty -> .)
    $end            reduce using rule 71 (empty -> .)
    FIN             reduce using rule 71 (empty -> .)
    SINO            reduce using rule 71 (empty -> .)
    LLAVE_CIERRA    reduce using rule 71 (empty -> .)

  ! PUNTO           [ reduce using rule 71 (empty -> .) ]
  ! PUNTO_COMA      [ reduce using rule 71 (empty -> .) ]
  ! COMA            [ reduce using rule 71 (empty -> .) ]

    separador_opt                  shift and go to state 38
    separador                      shift and go to state 31
    empty                          shift and go to state 32

state 9

    (12) instruccion -> mostrar . separador_opt
    (65) separador_opt -> . separador_opt separador
    (66) separador_opt -> . separador
    (67) separador_opt -> . empty
    (68) separador -> . PUNTO
    (69) separador -> . PUNTO_COMA
    (70) separador -> . COMA
    (71) empty -> .

  ! shift/reduce conflict for PUNTO resolved as shift
  ! shift/reduce conflict for PUNTO_COMA resolved as shift
  ! shift/reduce conflict for COMA resolved as shift
    PUNTO           shift and go to state 33
    PUNTO_COMA      shift and go to state 34
    COMA            shift and go to state 35
    CREAR           reduce using rule 71 (empty -> .)
    DECLARAR        reduce using rule 71 (empty -> .)
    ID              reduce using rule 71 (empty -> .)
    MOSTRAR         reduce using rule 71 (empty -> .)
    SI              reduce using rule 71 (empty -> .)
    MIENTRAS        reduce using rule 71 (empty -> .)
    REPETIR         reduce using rule 71 (empty -> .)
    PARA            reduce using rule 71 (empty -> .)
    ENTERO          reduce using rule 71 (empty -> .)
    DECIMAL         reduce using rule 71 (empty -> .)
    TEXTO           reduce using rule 71 (empty -> .)
    $end            reduce using rule 71 (empty -> .)
    FIN             reduce using rule 71 (empty -> .)
    SINO            reduce using rule 71 (empty -> .)
    LLAVE_CIERRA    reduce using rule 71 (empty -> .)

  ! PUNTO           [ reduce using rule 71 (empty -> .) ]
  ! PUNTO_COMA      [ reduce using rule 71 (empty -> .) ]
  ! COMA            [ reduce using rule 71 (empty -> .) ]

    separador_opt                  shift and go to state 39
    separador                      shift and go to state 31
    empty                          shift and go to state 32

state 10

    (13) instruccion -> condicional . separador_opt
    (65) separador_opt -> . separador_opt separador
    (66) separador_opt -> . separador
    (67) separador_opt -> . empty
    (68) separador -> . PUNTO
    (69) separador -> . PUNTO_COMA
    (70) separador -> . COMA
    (71) empty -> .
